--- a/files/styles/index.css
+++ b/files/styles/index.css
@@ -5,11 +5,21 @@ html body {
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    border: transparent;
 }
 
 #element {
-    scrollbar-width: none;
+    scrollbar-width: thin;
 }
 
 html {
@@ -48,10 +58,7 @@ a {
     border-style: none;
 }
 
-hr {
-    border-radius: 10px;
-}
-
 .reducedHR {
     max-width: 100vh;
+    border-radius: 10px;
 }
